--- a/EQ/ALTabBar/TabBarView.xib
+++ b/EQ/ALTabBar/TabBarView.xib
@@ -147,12 +147,12 @@
                     <rect key="frame" x="55" y="1" width="75" height="50"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="36"/>
-                    <state key="normal" backgroundImage="buttonSolapasCatalogo.png">
+                    <state key="normal" backgroundImage="inicio.png">
                         <color key="titleColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
-                    <state key="selected" image="buttonSolapasCatalogoHighlighted.png"/>
-                    <state key="highlighted" image="buttonSolapasCatalogoHighlighted.png">
+                    <state key="selected" image="inicio.png"/>
+                    <state key="highlighted" image="inicio.png">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
@@ -203,5 +203,6 @@
         <image name="buttonSolapasProductos.png" width="75" height="50"/>
         <image name="buttonSolapasProductosHighlighted.png" width="75" height="50"/>
         <image name="fondoSolapas.png" width="768" height="50"/>
+        <image name="inicio.png" width="134" height="81"/>
     </resources>
 </document>
